Read company data from EQT API and store in DB